--- a/core/templates/basic/test.html
+++ b/core/templates/basic/test.html
@@ -1,6 +1,6 @@
 <head>
       <title>
-          ALFA2-BD {% block title %}{% endblock %}
+          CR-ITA {% block title %}{% endblock %}
       </title>
       <!-- HTML5 Shim and Respond.js IE10 support of HTML5 elements and media queries -->
       <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
