--- a/core/templates/cr/test.html
+++ b/core/templates/cr/test.html
@@ -35,6 +35,6 @@
       <h2 style="text-align:center"> Teste CR</h2>
       <h3 style="text-align:center">CR: {{cr}}</h3>
       <h3 style="text-align:center">Média Simples: {{media_simples}}</h3>
-      <h3 style="text-align:center">Créditos Totais: {{creditos}}</h3>
+      <h3 style="text-align:center">Créditos Eletivas: {{creditos}}</h3>
       <h3 style="text-align:center">Curso: {{curso}}</h3>
 </body>
